@@ -5,6 +5,8 @@ var CloudCommander, $, Util, DOM;
     
     DOM = {};
     
+    /* PRIVATE */
+    
     function getCurrentFile(){
         return CloudCommander.CURRENT_FILE;
     }
@@ -64,68 +66,89 @@ var CloudCommander, $, Util, DOM;
         return lRet_b;
     };
     
+     /**
+     * safe add event listener
+     * @param pType
+     * @param pListener
+     * @param pUseCapture
+     */
+    DOM.addListener             = function(pType, pListener, pUseCapture){
+        return document.addEventListener(
+            pType, 
+            pListener,
+            pUseCapture || false
+        );
+    };
+    
+    /**
+     * safe add event keydown listener
+     * @param pType
+     * @param pListener
+     * @param pUseCapture
+     */
+    DOM.addKeyListener          = function(pListener, pUseCapture){
+        return DOM.addListener('keydown', pListener, pUseCapture);
+    };
+    
     /* Load file countent thrue ajax */
-    DOM.ajax                   = function(pParams){
+    DOM.ajax                    = function(pParams){
         /* if on webkit */
-        if(window.XMLHttpRequest){
-            if(!XMLHTTP)
-                XMLHTTP = new XMLHttpRequest();
-            
-            var lMethod = 'GET';
-            if(pParams.method)
-                lMethod = pParams.method;
-            
-            XMLHTTP.open(lMethod, pParams.url, true);
-            XMLHTTP.send(null);
-                        
-            var lSuccess_f = pParams.success;
-            if(typeof lSuccess_f !== 'function')
-            console.log('error in DOM.ajax onSuccess:', pParams);
-            
-            XMLHTTP.onreadystatechange = function(pEvent){                
-                if (XMLHTTP.readyState === 4 /* Complete */){
-                    var lJqXHR = pEvent.target;
-                    var lContentType = XMLHTTP.getResponseHeader('content-type');
+        if(!XMLHTTP)
+            XMLHTTP = new XMLHttpRequest();
+        
+        var lMethod = 'GET';
+        if(pParams.method)
+            lMethod = pParams.method;
+        
+        XMLHTTP.open(lMethod, pParams.url, true);
+        XMLHTTP.send(null);
                     
-                    if (XMLHTTP.status     === 200 /* OK */){                        
-                        var lData = lJqXHR.response;
-                        
-                        /* If it's json - parse it as json */                        
-                        if(lContentType &&
-                            lContentType.indexOf('application/json') === 0){
-                                try{
-                                    lData = JSON.parse(lJqXHR.response);
-                                }
-                                catch(pError) {
-                                    /* if could not parse */
-                                    console.log('Error: could not parse' +
-                                        'json from server from url: '    +
-                                        pParams.url);
-                                    
-                                    lData = lJqXHR.response;
-                                }
+        var lSuccess_f = pParams.success;
+        if(typeof lSuccess_f !== 'function')
+        console.log('error in DOM.ajax onSuccess:', pParams);
+        
+        XMLHTTP.onreadystatechange = function(pEvent){                
+            if (XMLHTTP.readyState === 4 /* Complete */){
+                var lJqXHR = pEvent.target;
+                var lContentType = XMLHTTP.getResponseHeader('content-type');
+                
+                if (XMLHTTP.status     === 200 /* OK */){                        
+                    var lData = lJqXHR.response;
+                    
+                    /* If it's json - parse it as json */                        
+                    if(lContentType &&
+                        lContentType.indexOf('application/json') === 0){
+                            try{
+                                lData = JSON.parse(lJqXHR.response);
                             }
-                        
-                        lSuccess_f(lData, lJqXHR.statusText, lJqXHR);
-                    }
-                    else/* file not found or connection lost */{
-                        var lError_f = pParams.error;
-                        
-                        /* if html given or something like it
-                         * getBack just status of result
-                         */
-                        if(lContentType &&
-                            lContentType.indexOf('text/plain') !== 0){
-                                lJqXHR.responseText = lJqXHR.statusText;
+                            catch(pError) {
+                                /* if could not parse */
+                                console.log('Error: could not parse' +
+                                    'json from server from url: '    +
+                                    pParams.url);
+                                
+                                lData = lJqXHR.response;
+                            }
                         }
-                        
-                        if(typeof lError_f === 'function')
-                            lError_f(lJqXHR);
-                    }
+                    
+                    lSuccess_f(lData, lJqXHR.statusText, lJqXHR);
                 }
-            };
-        }
-        else $.ajax(pParams);
+                else/* file not found or connection lost */{
+                    var lError_f = pParams.error;
+                    
+                    /* if html given or something like it
+                     * getBack just status of result
+                     */
+                    if(lContentType &&
+                        lContentType.indexOf('text/plain') !== 0){
+                            lJqXHR.responseText = lJqXHR.statusText;
+                    }
+                    
+                    if(typeof lError_f === 'function')
+                        lError_f(lJqXHR);
+                }
+            }
+        };
     };
         
     /*
@@ -384,8 +407,8 @@ var CloudCommander, $, Util, DOM;
         });
     };
     
-    DOM.socketLoad             = function(){
-        DOM.jsload('lib/client/socket.js');
+    DOM.socketLoad             = function(pCallBack){
+        DOM.jsload('lib/client/socket.js', pCallBack);
     };
     
     /* DOM */
