@@ -1,5 +1,5 @@
 /* script, fixes ie */
-var CloudCommander, DOM, $;
+var Util, DOM, $;
 
 (function(){
     "use strict";
@@ -26,12 +26,28 @@ var CloudCommander, DOM, $;
                 .appendTo(pParams_o.parent || document.head);
         };
     }
-    
+        
     /* setting function context (this) */
     DOM.bind = function(pFunction, pContext){
         return $.proxy(pFunction, pContext);
     };
-        
+    
+    if (!document.addEventListener)
+        /**
+         * safe add event listener on ie
+         * @param pType
+         * @param pListener
+         */
+        DOM.addListener = function(pType, pListener){
+            var lType = 'on' + pType,
+                lFunc = document[lType];
+            
+            document[lType] = function(){
+                Util.exec(lFunc);
+                pListener();
+            };
+        };
+    
     if(!document.getElementsByClassName){
         DOM.getByClass = function(pClass, pElement){
             var lClass = '.' + pClass,
@@ -123,4 +139,6 @@ var CloudCommander, DOM, $;
         };
     }
     
+    if(!window.XMLHttpRequest)
+        DOM.ajax = $.ajax;
 })();
