@@ -93,7 +93,7 @@ var CloudCommander, Util, DOM, $, Github;
 
     cloudcmd.Storage.Keys              = function(){        
         DOM.jqueryLoad(function(){
-            Util.loadOnLoad([ init, load, setConfig ]);
+            Util.loadOnLoad([ init, setConfig, load ]);
         });
     };
     
