@@ -58,16 +58,24 @@ var Util, exports;
         return lRet;
     };
     
-    Util.loadOnLoad             = function(pFunc_a){
-        if( Util.isArray(pFunc_a) ) {
-            var lFunc = pFunc_a.pop();
+    Util.loadOnLoad             = function(pFunc_a, pData){
+        if( Util.isArray(pFunc_a) && pFunc_a.length) {
+            var lFunc_a = [].concat(pFunc_a),
+                lFunc = lFunc_a.pop(),
+                lCallBack = function(pData){
+                    return Util.loadOnLoad(lFunc_a, pData);
+                };
             
-            Util.exec(lFunc, function(){
-                return Util.loadOnLoad(pFunc_a);
-            });
+            if(pData)
+                pData = {
+                    data        : pData,
+                    callback    : lCallBack
+                };
+                
+            Util.exec(lFunc , pData || lCallBack);
         }
         else
-            return Util.exec(pFunc_a);
+            return Util.exec(lFunc_a);
     };
     
     /**
